# echonetwork

./: .editorconfig  .gitignore  README.md  nb-configuration.xml  pom.xml
client-otr4j/: pom.xml
client-otr4j-jitsi/: pom.xml
client-otr4j-jitsi/.config/: checkstyle.xml  header.txt
client-otr4j-jitsi/src/main/resources/: logging.properties
client-otr4j/.config/: checkstyle.xml  header.txt
client-otr4j/codecheck/: checkstyle.xml
client-otr4j/src/main/resources/: logging.properties
client-otrr/: Cargo.toml  README.md  client-otrr.code-workspace
client-otrr/src/: client.rs  echoclient.rs  protocol.rs  stdinclient.rs
codecheck/: pmd-rules.xml
protocol/: pom.xml
protocol/.config/: checkstyle.xml  header.txt
protocol/src/main/java/nl/dannyvanheumen/echonetwork/protocol/: Client.java  EchoProtocol.java
protocol/src/main/java/nl/dannyvanheumen/echonetwork/util/: LogManagers.java
protocol/src/main/java/nl/dannyvanheumen/echonetwork/utils/: Integers.java  LogManagers.java  StringBuilders.java  Strings.java  Threads.java
server/: pom.xml
server/.config/: checkstyle.xml  header.txt
server/codecheck/: pmd-rules.xml
server/src/main/java/nl/dannyvanheumen/echonetwork/server/: EchoServer.java
server/src/main/resources/: logging.properties
src/main/java/nl/dannyvanheumen/otr4jechoserver/: EchoClient.java  EchoProtocol.java  EchoServer.java  EchoSession.java  Host.java  StdinClient.java
src/main/java/nl/dannyvanheumen/otr4jechoserver/util/: LogManagers.java
src/main/resources/: logging.properties
(+8 files in other folders)
